About blood 3rd Draft

--- a/blood_donation.tex
+++ b/blood_donation.tex
@@ -17,9 +17,13 @@
 	 
 	Το πλάσμα αποτελεί το μεγαλύτερο και κύριο συστατικό του αίματος, καταλαμβάνοντας το 55\% του συνολικού όγκου του. Είναι ένα υποκίτρινο υγρό μέσω του οποίου μεταφέρονται αιμοσφαίρια, πρωτεΐνες και άλλες ουσίες. Αποτελείται κατά 91,5\% από νερό, κατά 7\% από πρωτεΐνες, όπως η λευκωματίνη (αλβουμίνη), οι σφαιρίνες και το ινωδογόνο, και κατά 1,5\% από άλλες ουσίες, όπως θρεπτικά συστατικά, ορμόνες, αναπνευστικά αέρια, ηλεκτρολύτες, βιταμίνες και άχρηστες αζωτούχες ουσίες \cite{bloodPlasma}. Η κύρια λειτουργία που επιτελεί είναι η μεταφορά υγρών και υδατοδιάλυτων ουσιών όπως είναι οι ορμόνες και βασικές .
 
-	Το υπόλοιπο 45\% του αίματος αποτελείται από αιμοσφαίρια και κυρίως ερυθρά αιμσοφαίρια, λευκά αιμοσφαίρια και αιμοπετάλια. Τα ερυθρά αιμοσφαίρια είναι τα πιο πολυάριθμα κύτταρα σε κυκλοφορία και δίνουν στο αίμα το χαρακτηριστικό κόκκινο χρώμα του. Τα ερυθρά αιμοσφαίρια χρησιμοποιούνται ευρέως, για να αναπληρώνουν την απώλεια αίματος που προκαλείται από αιμορραγία κατά τη γέννα, κατά τη διάρκεια χειρουργικής επέμβασης και κατά τη διάρκεια ατυχημάτων. Η μετάγγιση ερυθρών αιμοσφαιρίων μπορεί επίσης να είναι σωτήρια για τη ζωή του ασθενούς σε συγκεκριμένους τύπους αναιμίας. Η λειτουργία τους αφορά τη διατήρηση των ιστών στη ζωή καθώς μεταφέρουν σε αυτούς οξυγόνο και απομακρύνουν το διοξείδιο του άνθρακα. Η εκατοστιαία αναλογία ερυθρών αιμοσφαιρίων ανά μονάδα όγκου αίματος ονομάζεται αιματοκρίτης.
+	Το υπόλοιπο 45\% του αίματος αποτελείται από αιμοσφαίρια και κυρίως ερυθρά αιμοσφαίρια, λευκά αιμοσφαίρια και αιμοπετάλια. Τα ερυθρά αιμοσφαίρια είναι τα πιο πολυάριθμα κύτταρα σε κυκλοφορία και δίνουν στο αίμα το χαρακτηριστικό κόκκινο χρώμα του. Τα ερυθρά αιμοσφαίρια χρησιμοποιούνται ευρέως, για να αναπληρώνουν την απώλεια αίματος που προκαλείται από αιμορραγία κατά τη γέννα, κατά τη διάρκεια χειρουργικής επέμβασης και κατά τη διάρκεια ατυχημάτων. Η μετάγγιση ερυθρών αιμοσφαιρίων μπορεί επίσης να είναι σωτήρια για τη ζωή του ασθενούς σε συγκεκριμένους τύπους αναιμίας. Η λειτουργία τους αφορά τη διατήρηση των ιστών στη ζωή καθώς μεταφέρουν σε αυτούς οξυγόνο και απομακρύνουν το διοξείδιο του άνθρακα. Η εκατοστιαία αναλογία ερυθρών αιμοσφαιρίων ανά μονάδα όγκου αίματος ονομάζεται αιματοκρίτης \cite{hematologyBasics}.
 	
-	Στο σχήμα \ref{fig:blood_cells_characteristics} παρακάτω βλέπουμε τα βασικά χαρακτηριστικά για τα κύτταρα του αίματος.
+	Τα λευκά αιμοσφαίρια ή λευκοκύτταρα (WBC) αποτελούν λιγότερο από το 1\% του ολικού αίματος. Η πρωταρχική λειτουργία των λευκοκυττάρων είναι η καταπολέμηση των λοιμώξεων μέσω της επίθεσης και της καταστροφής επιβλαβών ξένων ουσιών. Σχηματίζονται στο μυελό των οστών, στη σπλήνα και τους λεμφαδένες \cite{whiteBloodCells}.
+	
+	Τα αιμοπετάλια ή θρομβοκύτταρα παράγονται από το μυελό των οστών και αποτελούν λιγότερο από το 1\% του πλήρους αίματος. Παίζουν καθοριστικό ρόλο στην πήξη του αίματος και την αιμόσταση, δηλαδή στην αναστολή της αιμορραγίας ή της κυκλοφορίας. Σχηματίζουν θρόμβους ώστε να αποτρέπεται η διαρροή αίματος από τις πληγές και αν ο αριθμός τους είναι χαμηλός, αυτό μπορεί να οδηγήσει σε εύκολη δημιουργία μωλώπων και σε μεγάλη αιμορραγία. Οι ασθενείς που έχουν λευχαιμία ή ανεπάρκεια μυελού των οστών, συνήθως έχουν χαμηλό ποσοστό αιμοπεταλίων και χρειάζονται αιμοπετάλια, για να διαφυλάξουν τη λειτουργία της πήξης του αίματός τους \cite{hematologyBasics}.
+	
+	Στο σχήμα \ref{fig:blood_cells_characteristics} βλέπουμε μια σύνοψη των βασικών χαρακτηριστικών των συστατικών του αίματος.
 \begin{figure}[H]
 	    \centering
 	    \includegraphics[width=0.7\textwidth]{blood_cells_characteristics.jpg}
@@ -33,7 +37,7 @@
 		\subsubsection{Ομάδες αίματος και συμβατότητα}	
 			Στην επιφάνεια του ερυθρού αιμοσφαιρίου υπάρχουν διάφορα αντιγόνα ή ουσίες των ομάδων αίματος (blood group substances). Σήμερα είναι γνωστά 23 συστήματα ομάδων αίματος, γενετικά ανεξάρτητα το ένα από το άλλο. Κληρονομούνται σύμφωνα με τους νόμους του Mendel και η γνώση τους είναι εξαιρετικά χρήσιμη στην Ιατροδικαστική (έλεγχος πατρότητας), σε ανθρωπολογικές μελέτες αλλά κυρίως για τη σωστή και ασφαλή μετάγγιση αίματος στην κλινική πράξη \cite{dawkins}. Κάθε σύστημα ομάδων αίματος περιλαμβάνει μία σειρά αντιγόνων που σχετίζονται ως προς τη δομή. Συνολικά, τα συστήματα αυτά περιλαμβάνουν περισσότερα από 400 αντιγόνα. Οι ουσίες των ομάδων αίματος δεν περιορίζονται μόνο στη μεμβράνη των ερυθρών αιμοσφαιρίων αλλά βρίσκονται ακόμη σε κύτταρα πολλών ιστών καθώς και σε υγρά του σώματος, όπως σάλιο, γαστρικό υγρό, σπέρμα, ούρα, και γάλα. Τα συστήματα ομάδας αίματος συμπεριλαμβάνουν τα ΑΒΟ, τα Rh, MNS, Kell, Duffy, Kidd και άλλα.
 			
-			Το πιο γνωστό και πιο ευρείας χρήσης είναι το σύστημα ΑΒΟ. Είναι το πρώτο σύστημα που ανακαλύφθηκε το 1900 από τον Landsteiner (Βραβείο Νομπέλ Ιατρικής 1930). Η ανακάλυψη αυτή άνοιξε το δρόμο για την ασφαλή μετάγγιση αίματος. Το σύστημα ΑΒΟ εξακολουθεί και σήμερα να είναι το πιο σημαντικό στη μετάγγιση. Το σύστημα συνδέεται με τρία αντιγόνα Α, Β και Η. Το σύστημα χαρακτηρίζεται από την παρουσία ή την απουσία στα ερυθρά αιμοσφαίρια των αντιγόνων (συγκολλητινογόνων). Με συνδυασμό αυτών διακρίνονται τέσσερις ομάδες αίματος, η ΑΒ, η Α, η Β, και η Ο. Η ομάδα ΑΒ χαρακτηρίζεται από την παρουσία στα ερυθρά αιμοσφαίρια και των δύο αντιγόνων Α και Β. Η ομάδα Α χαρακτηρίζεται από την παρουσία του αντιγόνου Α. Η ομάδα Β χαρακτηρίζεται από την παρουσία του αντιγόνου Β. Τέλος η ομάδα Ο δεν περιέχει κανένα από τα αντιγόνα Α ή Β, αλλά περιέχει το αντιγόνο Η. Το τελευταίο υπάρχει σε όλες τις ομάδες αλλά ιδιαιτέρως παρατηρείται στην ομάδα Ο.
+			Το πιο γνωστό και πιο ευρείας χρήσης είναι το σύστημα ΑΒΟ. Είναι το πρώτο σύστημα που ανακαλύφθηκε το 1900 από τον Landsteiner (Βραβείο Νομπέλ Ιατρικής 1930) \cite{landsteinerABO}. Η ανακάλυψη αυτή άνοιξε το δρόμο για την ασφαλή μετάγγιση αίματος. Το σύστημα ΑΒΟ εξακολουθεί και σήμερα να είναι το πιο σημαντικό στη μετάγγιση. Το σύστημα συνδέεται με τρία αντιγόνα Α, Β και Η. Το σύστημα χαρακτηρίζεται από την παρουσία ή την απουσία στα ερυθρά αιμοσφαίρια των αντιγόνων (συγκολλητινογόνων). Με συνδυασμό αυτών διακρίνονται τέσσερις ομάδες αίματος, η ΑΒ, η Α, η Β, και η Ο. Η ομάδα ΑΒ χαρακτηρίζεται από την παρουσία στα ερυθρά αιμοσφαίρια και των δύο αντιγόνων Α και Β. Η ομάδα Α χαρακτηρίζεται από την παρουσία του αντιγόνου Α. Η ομάδα Β χαρακτηρίζεται από την παρουσία του αντιγόνου Β. Τέλος η ομάδα Ο δεν περιέχει κανένα από τα αντιγόνα Α ή Β, αλλά περιέχει το αντιγόνο Η. Το τελευταίο υπάρχει σε όλες τις ομάδες αλλά ιδιαιτέρως παρατηρείται στην ομάδα Ο.
 			
 			Στον ορό του αίματος των διαφόρων ατόμων παρατηρούνται φυσιολογικές συγκολλητίνες ομόλογοι των συγκολλητινογόνων Α και Β. Οι φυσιολογικές συγκολλητίνες είναι οι α (anti- A) και οι β (anti-B). Στον ορό δεν υπάρχει ποτέ η συγκολλητίνη η ομόλογος προς το συγκολλητινογόνο που υπάρχει στα ερυθρά αιμοσφαίρια του ιδίου ατόμου. Έτσι στον ορό του αίματος ΑΒ δεν υπάρχει καμία συγκολλητίνη. Στον ορό της ομάδας Α υπάρχει η συγκολλητίνη anti-B ή β. Στον ορό της ομάδας Β υπάρχει η συγκολλητίνη anti-Α ή α. Τέλος στον ορό της ομάδας Ο υπάρχουν και οι δύο συγκολλητίνες α και β. Η συγκολλητίνη α αντιδρά με το συγκολλητινιγόνο Α και η συγκολλητίνη β αντιδρά με το συγκολλητινιγόνο Β. Εάν επομένως σε μία μετάγγιση αίματος ο ορός του ασθενούς (δέκτη) έχει συγκολλητίνες (α ή β, α και β), τότε αυτές θα συγκολλήσουν τα ερυθρά αιμοσφαίρια του δότη, όταν στα αιμοσφαίρια αυτά υπάρχουν συγκολλητινογόνα Α ή Β ή Α και Β. Στην περίπτωση αυτή τα συγκολλημένα ερυθρά αιμοσφαίρια μπορεί να προκαλέσουν ακόμη και το θάνατο του δέκτη. Στο σχήμα \ref{fig:blood_antibodies_antigons} φαίνονται συγκεντρωτικά τα στοιχεία που αναλύσαμε παραπάνω.		
 	\begin{figure}[h!]
@@ -48,13 +52,13 @@
 αιμοσφαίρια του πιθήκου Rhesus Maccacus. Το σύστημα Rhesus είναι το δεύτερο κατά
 σπουδαιότητα σύστημα ομάδων αίματος μετά το ΑΒΟ. Η γνώση του είναι απαραίτητη για
 την ασφαλή μετάγγιση αίματος, ενώ είναι το σύστημα, που κυρίως ευθύνεται για την
-αιμολυτική νόσο του νεογνού. Σήμερα είναι γνωστά περί τα 40 αντιγόνα που ανήκουν στο
+αιμολυτική νόσο του νεογνού. Σήμερα είναι γνωστά περί τα 50 αντιγόνα που ανήκουν στο
 σύστημα Rhesus. Από αυτά τα πέντε είναι τα κύρια και βασικά. Το κυριότερο αντιγόνο είναι
 το D και άτομα που το έχουν στα ερυθρά αιμοσφαίρια είναι Rh-Θετικά ή Rh (+), ενώ αυτά
 που δεν το έχουν είναι Rh-Αρνητικά ή Rh (-). Το αντιγόνο D είναι εξαιρετικά ανοσογόνο
 (immunogenic) και άτομα Rh-Αρνητικά, όταν εκτεθούν σε αυτό, μπορούν να σχηματίσουν
 anti-D αντισώματα. Το 85\% των λευκών ανθρώπων έχουν τον παράγοντα αυτό, δηλαδή είναι
-Rh-Θετικοί και το 15\% δεν το έχουν, δηλαδή είναι Rh-Αρνητικοί. 
+Rh-Θετικοί και το 15\% δεν το έχουν, δηλαδή είναι Rh-Αρνητικοί \cite{Landsteiner01011940}. 
 
 Συμβάντα μπορεί να παρατηρηθούν, αν δεν προσδιοριστεί ο παράγοντας Rhesus, στις εξής
 περιπτώσεις.
@@ -127,6 +131,8 @@ Rh-Θετικοί και το 15\% δεν το έχουν, δηλαδή είνα
 	Στόχος είναι οι εθελοντές, που πληρούν τα κριτήρια για αιμοδοσία να γίνονται τακτικοί αιμοδότες, δηλαδή να πραγματοποιούν δωρεά αίματος αρκετές φορές το χρόνο και να παραμένουν στον κατάλογο των ενεργών αιμοδοτών για πολλά χρόνια. Η διατήρηση ενός υψηλού επιπέδου ποιότητας παρεχόμενων υπηρεσιών στην υπηρεσία αιμοδοσίας συνίσταται στην προτεραιότητα ικανοποίησης των αναγκών και των προσδοκιών των εθελοντών αιμοδοτών. Ωστόσο είναι σημαντικό να επισημάνουμε ότι μια επένδυση στην προσέλκυση και την διατήρηση εθελοντών, δεν θα αποδώσει μόνο ασφαλή αποθέματα αίματος και προστασία της υγείας τόσο στον δότη όσο και στον λήπτη, αλλά και σημαντική εξοικονόμηση κόστους για την υπηρεσία μέσω της μείωσης του αριθμού μονάδων αίματος που πρέπει να απορριφθούν λόγω της ανεύρεσης θετικών δεικτών λοιμωδών νοσημάτων. 
 	
 	Επιπλέον η προσέλκυση και η διατήρηση των εθελοντών αιμοδοτών είναι μια δυναμική λειτουργία που σχεδιάζεται κάθε φορά ανάλογα με την μελέτη και ανάλυση των παραμέτρων της συγκεκριμένης κοινωνικής ομάδας που απευθυνόμαστε σε σχέση με την αξιολόγηση και εκτίμηση των αναγκών σε αίμα και την υπάρχουσα κατάσταση στο χώρο της.
+		\subsubsection{Διαδικασία της Αιμοδοσίας}
+		
 	\subsection{Εθελοντές αιμοδότες}
 		\subsubsection{Κριτήρια επιλογής αιμοδοτών} 
 			Βασικός στόχος και υποχρέωση των υπηρεσιών μετάγγισης αίματος είναι να συλλέξουν αίμα από υγιείς αιμοδότες, ώστε αφενός να προφυλαχθεί η δική τους υγεία και αφετέρου να προστατευθεί ο αιμολήπτης ασθενής από τη μετάδοση ασθενειών ή φαρμακευτικών ουσιών που μπορεί δυνητικά να είναι βλαβερά για την υγεία του. Ο υποψήφιος αιμοδότης κατά τη λήψη του ιστορικού πρέπει να αναφέρει τυχόν συμπτώματα, ώστε να βοηθήσει το ιατρικό προσωπικό να κρίνει με ασφάλεια την πιθανότητα κινδύνου. Κάθε πρόβλημα υγείας που ενδεχομένως έχει ο υποψήφιος αιμοδότης, πρέπει να συζητείται με τον υπεύθυνο γιατρό της αιμοδοσίας, ο οποίος και κρίνει τελικά για τη καταλληλότητα της αιμοληψίας. Η διαδικασία θα πρέπει να είναι τέτοια έτσι ώστε και να εξασφαλίζεται ασφαλή αιμοδοσία και παροχή αίματος αλλά και να μην απορρίπτονται υγιείς αιμοδότες οι οποίοι θα μπορούσαν να συνεισφέρουν \cite{bloodDonorSelection}.
