--- a/references.bib
+++ b/references.bib
@@ -50,6 +50,16 @@
   Url                      = {http://dx.doi.org/10.1002/asi.22634}
 }
 
+@Electronic{whiteBloodCells,
+  Title                    = {What Are White Blood Cells},
+  Author                   = {Bowers},
+  Organization             = {University of Rochester medical center},
+  Url                      = {https://www.urmc.rochester.edu/encyclopedia/content.aspx?ContentTypeID=160&ContentID=35},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.04}
+}
+
 @Electronic{bloodPlasma,
   Title                    = {What Is Plasma},
   Author                   = {Bowers, Nancy},
@@ -288,6 +298,26 @@
   Bdsk-url-1               = {https://www.grnet.gr/en/node/400},
   Owner                    = {ilias},
   Timestamp                = {2015.09.27}
+}
+
+@Electronic{hematologyBasics,
+  Title                    = {Blood Basics},
+  Author                   = {American Society of Hemology},
+  Organization             = {American Society of Hemology},
+  Url                      = {http://www.hematology.org/Patients/Basics/},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.04}
+}
+
+@Article{landsteinerABO,
+  Title                    = {Zur Kenntnis der antifermentativen, lytischen und agglutinierenden Wirkungen des Blutserums und der Lymphe},
+  Author                   = {Karl Landsteiner},
+  Journal                  = {Zentralblatt Bakteriologie},
+  Year                     = {1900},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.04}
 }
 
 @Electronic{bloodVolume,
@@ -582,5 +612,18 @@ URN: urn:nbn:de:0114-fqs0501297},
 
   Date-added               = {2015-10-03 18:43:55 +0000},
   Date-modified            = {2015-10-03 18:50:17 +0000}
+}
+
+@article{Landsteiner01011940,
+author = {Landsteiner, Karl and Wiener, Alexander S.}, 
+title = {An Agglutinable Factor in Human Blood Recognized by Immune Sera for Rhesus Blood},
+volume = {43}, 
+number = {1}, 
+pages = {223}, 
+year = {1940}, 
+doi = {10.3181/00379727-43-11151}, 
+URL = {http://ebm.sagepub.com/content/43/1/223.short}, 
+eprint = {http://ebm.sagepub.com/content/43/1/223.full.pdf+html}, 
+journal = {Experimental Biology and Medicine} 
 }
 
