--- a/thesis.tex
+++ b/thesis.tex
@@ -48,7 +48,7 @@
 
 \frontmatter
 
-\title{Σχεδίαση και Υλοποίηση cloud συστήματος για εθελοντική αιμοδοσία}
+\title{Σχεδίαση και Υλοποίηση συστήματος εθελοντικής αιμοδοσίας στο υπολογιστικό νέφος}
 \author{Φωτόπουλος Ηλίας\\Ρεβέκκα Παλαιολόγου}
 \date{Σεπτέμβριος 2015}
 \datedefense{08}{10}{2015}
