Blood Donation Procedure 1st Draft and add Donor questionnaire in Appendix

--- a/thesis.tex
+++ b/thesis.tex
@@ -9,6 +9,7 @@
 \usepackage{color}
 \usepackage{listings}
 \usepackage{float}
+\usepackage{pdfpages}
 \restylefloat{table}
 
 
@@ -107,6 +108,8 @@
 \backmatter
 
 \appendix
+
+\includepdf[scale=0.65, pages={1}, pagecommand=\chapter{Ερωτηματολόγιο Αιμοδότη}]{Appendix/donor_questionnaire.pdf} 
 
 \chapter{Ευρετήριο συμβολισμών}
 
