--- a/blood_donation.tex
+++ b/blood_donation.tex
@@ -132,9 +132,21 @@ Rh-Θετικοί και το 15\% δεν το έχουν, δηλαδή είνα
 	
 	Επιπλέον η προσέλκυση και η διατήρηση των εθελοντών αιμοδοτών είναι μια δυναμική λειτουργία που σχεδιάζεται κάθε φορά ανάλογα με την μελέτη και ανάλυση των παραμέτρων της συγκεκριμένης κοινωνικής ομάδας που απευθυνόμαστε σε σχέση με την αξιολόγηση και εκτίμηση των αναγκών σε αίμα και την υπάρχουσα κατάσταση στο χώρο της.
 		\subsubsection{Διαδικασία της Αιμοδοσίας}
-		 Η διαδικασία της αιμοδοσίας είναι lorem ipsum dolor lorem ipsum dolor
+		 Η επιλογή των αιμοδοτών γίνεται από άρτια εκπαιδευμένο και επαγγελματικά καταρτισμένο προσωπικό που έχει ως σκοπό την ασφάλεια τόσο του αιμοδότη όσο και του δέκτη. Στην είσοδο της αιμοδοσίας υπάρχουν ειδικά έντυπα αυτοαποκλεισμού, τα οποία καλούνται να διαβάσουν όλοι οι άνθρωποι που προσέρχονται προκειμένου να προσφέρουν αίμα \cite{diadikasiaAimodosias}. Στην συνέχεια αν ο δυνητικός αιμοδότης κρίνει ότι πληροί τα κριτήρια αποδοχής και δεν ισχύει κάποιο από τα κριτήρια αποκλεισμού για την περίπτωση του, θα πρέπει να συμπληρώσει το ερωτηματολόγιο του αιμοδότη \cite{ekeaQuestionnaire} (περισσότερα στο Παράρτημα Α). Το προαναφερθέν ερωτηματολόγιο είναι εμπιστευτικό διασφαλίζοντας το ιατρικό απόρρητο και θα πρέπει να συμπληρώνεται από τον αιμοδότη κάθε φορά που θέλει να δώσει αίμα. Ο αιμοδότης έχει τη δυνατότητα να συζητήσει με τον ιατρό προβλήματα υγείας ή άλλους λόγους που θέτουν ενδεχομένως σε κίνδυνο την ασφάλεια του ίδιου ή του δέκτη.
+		 
+		 Στην συνέχεια ο αιμοδότης εξετάζεται για την αρτηριακή πίεση, σφυγμό, βάρος, αιματοκρίτη ή αιμοσφαιρίνη, πιθανές δερματικές αλλοιώσεις στο σημείο της φλεβοκέντησης καθώς και για τη φυσική του κατάσταση. Ο γιατρός της αιμοδοσίας, εφόσον συλλέξει τις απαραίτητες πληροφορίες και λαμβάνοντας υπόψιν τις απαντήσεις στο ερωτηματολόγιο του αιμοδότη, κρίνει αν μπορεί κάποιος, ο οποίος προσέρχεται στην υπηρεσία αιμοδοσίας, είναι σε θέση να προσφέρει αίμα. Η τελική ευθύνη για την επιλογή του αιμοδότη βαρύνει τον ιατρό της αιμοδοσίας.
+		 
+		Πρέπει να σημειωθεί, σε αυτό το σημείο, πως είναι απαραίτητη η έγγραφη συγκατάθεση του αιμοδότη ότι δέχεται να αιμοδοτήσει και να εξεταστεί το αίμα του για μεταδοτικά νοσήματα. Σε περίπτωση απόρριψης δίνονται οι απαραίτητες ιατρικές πληροφορίες και εξηγήσεις οι οποίες αφορούν στο λόγο και στη διάρκεια αποκλεισμού (για περισσότερα βλ: \ref{sssec:donor_screening}).
+		
+		Αφού κριθεί ότι ο αιμοδότης πληροί τις προϋποθέσεις, οδηγείται στην ειδική καρέκλα της αιμοδοσίας, γίνεται περίδεση του βραχίονα και καλή αντισηψία στην περιοχή της φλεβοκέντησης. Κατά τη διαδικασία της αιμοληψίας συστήνεται στον αιμοδότη να ανοιγοκλείνει τη γροθιά του, ώστε να διευκολύνεται η ροή του αίματος. Λαμβάνονται 450ml αίματος. Ο όγκος του αίματος, που προσφέρεται, αναπληρώνεται μέσα σε 24 ώρες μετά την αιμοδοσία.
+		
+		Μετά την αιμοληψία, το αίμα συλλέγεται σε ειδικούς σάκους, που περιέχουν αντιπηκτικές και άλλες ουσίες, οι οποίες βοηθούν στην άριστη διατήρηση του αίματος. Πριν αφαιρεθεί η βελόνα λαμβάνονται δείγματα για τις εξετάσεις, όπως προβλέπεται από το νόμο. Στο τέλος, ο αιμοδότης καλείται να παραμείνει καθιστός για λίγη ώρα, καθώς παράλληλα σε κάποια κέντρα του προσφέρεται χυμός και κάποιο μικρό πρόχειρο γεύμα.
+		
+		Πρόκειται για μια ανώδυνη διαδικασία. Μοναδικό ενόχλημα είναι ένας μικρός πόνος από τη βελόνα. Η αιμοδοσία είναι ακίνδυνη για τον αιμοδότη. Η περίπτωση να μολυνθεί ο αιμοδότης από AIDS ή άλλο μεταδιδόμενο νόσημα είναι μηδενική, αφού οι βελόνες που χρησιμοποιούνται είναι μιας χρήσης και αποστειρωμένες.
+		
+		Η αιμοδοσία διαρκεί περίπου δέκα λεπτά. Για την όλη διαδικασία, από τη συμπλήρωση του ερωτηματολογίου μέχρι να φύγει ο αιμοδότης, απαιτείται περίπου μισή ώρα \cite{diadikasiaAimodosias}.
 	\subsection{Εθελοντές αιμοδότες}
-		\subsubsection{Κριτήρια επιλογής αιμοδοτών} 
+		\subsubsection{Κριτήρια επιλογής αιμοδοτών} \label{sssec:donor_screening} 
 			Βασικός στόχος και υποχρέωση των υπηρεσιών μετάγγισης αίματος είναι να συλλέξουν αίμα από υγιείς αιμοδότες, ώστε αφενός να προφυλαχθεί η δική τους υγεία και αφετέρου να προστατευθεί ο αιμολήπτης ασθενής από τη μετάδοση ασθενειών ή φαρμακευτικών ουσιών που μπορεί δυνητικά να είναι βλαβερά για την υγεία του. Ο υποψήφιος αιμοδότης κατά τη λήψη του ιστορικού πρέπει να αναφέρει τυχόν συμπτώματα, ώστε να βοηθήσει το ιατρικό προσωπικό να κρίνει με ασφάλεια την πιθανότητα κινδύνου. Κάθε πρόβλημα υγείας που ενδεχομένως έχει ο υποψήφιος αιμοδότης, πρέπει να συζητείται με τον υπεύθυνο γιατρό της αιμοδοσίας, ο οποίος και κρίνει τελικά για τη καταλληλότητα της αιμοληψίας. Η διαδικασία θα πρέπει να είναι τέτοια έτσι ώστε και να εξασφαλίζεται ασφαλή αιμοδοσία και παροχή αίματος αλλά και να μην απορρίπτονται υγιείς αιμοδότες οι οποίοι θα μπορούσαν να συνεισφέρουν \cite{bloodDonorSelection}.
 			
 			Ο αιμοδότης πρέπει να είναι σε καλή υγεία και απαλλαγμένος από μεταδοτικές ασθένειες. Όμως κάθε άνθρωπος είναι επιρρεπής σε μικρο-αδιαθεσίες. Αυτές είναι πόνοι κάθε είδους, ακμή, πονόλαιμοι και δυσπεψία. Όλα αυτά δεν αποτελούν στοιχεία απόρριψης του αιμοδότη. Εάν ο δότης υποβάλλεται σε φαρμακευτική αγωγή ή έχει υποβληθεί στο άμεσο παρελθόν, πρέπει να σημειωθούν τα παρακάτω σχετικά με τα φάρμακα που παίρνει. Η ποσότητα του φαρμάκου, δηλαδή η πυκνότητα του φαρμάκου στον οργανισμό του δότη και η ταχύτητα απορρόφησης ή η αποβολή του. Το φάρμακο μπορεί να έχει δυσμενή επίπτωση στο δέκτη εφόσον η περιεκτικότητα του φαρμάκου στο δότη είναι αυξημένη. Εάν ο δέκτης είναι αλλεργικός σ' αυτό το φάρμακο ή εάν ο δέκτης είναι έγκυος γυναίκα μπορεί να προκληθεί μέχρι και τερατογένεση. Το φάρμακο μπορεί να διαταράξει το αίμα του δότη, π.χ. τη λειτουργικότητα των αιμοπεταλίων. Παρόλο ότι τα φαινόμενα αυτά έχουν αναγνωριστεί, η συχνότητά τους δεν μελετήθηκε ακόμη καλά. Εάν λοιπόν ο αιμοδότης λαμβάνει φάρμακα, δεν σημαίνει ότι αναγκαστικά δεν μπορεί να προσφέρει αίμα. Σε κάθε περίπτωση όμως είναι ορθό να ενημερώνεται ο γιατρός και το προσωπικό για τα φάρμακα που λαμβάνει και ανάλογα θα κριθεί εάν μπορεί να προσφέρει αίμα \cite{bloodDonorSelection}. 
