--- a/blood_donation.tex
+++ b/blood_donation.tex
@@ -216,23 +216,15 @@ Rh-Θετικοί και το 15\% δεν το έχουν, δηλαδή είνα
  		 \item Σφάλματα των μεταγγίσεων χωρίς συμβάματα (uneventful tranfusion errors)
  		 “η μετάγγιση οποιουδήποτε εσφαλμένου, ακατάλληλου ή μη ενδεικνυόμενου προϊόντος αίματος που δεν προκαλεί βλάβη στον 					λήπτη”(Οδηγός, Συμβούλιο της Ευρώπης, Έκδοση 14η)
  		 \end{itemize} 
- 	Κάθε σοβαρό ανεπιθύμητο συμβάν θα πρέπει να περιγράφεται ανάλογα με την σοβαρότητα του. Για αυτόν τον σκοπό αυτό, έχει καθιερωθεί μία διεθνώς αποδεκτή κλίμακα ταξινόμησης. Η εύρεση της αιτιακής συσχέτισης μεταξύ ανεπιθύμητης αντίδρασης και μετάγγισης, έχει πολύ μεγάλη σημασία, καθώς έτσι μπορούμε να αναγνωρίσουμε αν ευθύνεται κάποιο συστατικό του αίματος ή όχι. Υπάρχουν πολλοί διαφορετικοί τύποι αντιδράσεων μετάγγισης. Η πιο κοινή υποδιαίρεση που χρησιμοποιείται είναι η ταξινόμηση με βάση την εμφάνιση των αντιδράσεων σε οξείες (λιγότερο από 24 ώρες μετά) και καθυστερημένες (περισσότερο από 24 ώρες μετά την μετάγγιση) αντιδράσεις.
- 	 Σύμφωνα με την παθογένεση τους, οι ανεπιθύμητες ενέργειες μπορεί να διαιρεθεί σε λοιμώδη και μη λοιμώδη ανεπιθύμητες αντιδράσεις. Μη λοιμώδη οξείες αντιδράσεις περιλαμβάνουν οξείες αιμολυτικές αντιδράσεις μετάγγισης (AHTR), Φε- ενοχλήσουν τους μη αιμολυτικές αντιδράσεις μετάγγισης (FNHTR), αλλεργικές αντιδράσεις συμπεριλαμβανομένων αναφυλακτικών αντιδράσεων, σχετίζεται transfusion- οξύ τραυματισμό πνεύμονα (TRALI), σχετίζονται με τη μετάγγιση υπερφόρτωση του κυκλοφορικού συστήματος (TACO) , υποτασική αντιδράσεις και υπερκαλιαιμία. Μη λοιμώδη καθυστερημένες αντιδράσεις μετάγγισης περιλαμβάνουν όψιμη αιμολυτικές αντιδράσεις μετάγγισης (DHTR), καθυστέρησε ορολογικές αντιδράσεις μετάγγισης (DSTR), μετά τη μετάγγιση πορφύρα (PTP), σχετίζονται με τη μετάγγιση νόσο μοσχεύματος έναντι ξενιστή (TAGVHD) και αιμοσιδήρωση.
-Τα κύρια οξεία λοιμώδης ανεπιθύμητες αντιδράσεις οφείλονται σε βακτηριακή μόλυνση του συστατικού του αίματος, και καθυστερημένη λοιμώδεις αντιδράσεις μπορεί να οφείλεται σε ιική (π.χ. ηπατίτιδα B / C, HIV) ή παρασιτικές (π.χ. ελονοσία) μετάδοσης.
-Για τις συγκρίσεις και να καθορίσει τις προτεραιότητες για τις παρεμβάσεις για τη βελτίωση της ασφάλειας των μεταγγίσεων, κάποιος πρέπει να γνωρίζουν τις τιμές στις οποίες πραγματοποιούνται διάφορες αντιδράσεις.
-Για να είναι σε θέση να ανταλλάσσουν πληροφορίες και να συγκρίνουν τα δεδομένα, έχουν διεθνώς αποδεκτοί ορισμοί για παρενεργειών των σε λήπτες έχουν αναπτυχθεί 
-%(βλέπε http: // www.isbt-web.org/documentation ή / και http:. // Www ΛΑΝ -org.net: ΛΑΝ ISBT ορισμό WP HV εγκρίθηκε το 2006).
-Επιπλοκή σε ένα δότη
-Από πρόσφατα, ο δότης έχει λάβει τη δέουσα προσοχή σε προγράμματα αιμοεπαγρύπνηση. Οι ανεπιθύμητες ενέργειες σε ένα δότη που ονομάζεται επιπλοκές, επειδή τόσο η ρύθμιση και η αιτιολογία είναι εντελώς διαφορετικές από εκείνες σε έναν δέκτη. Χωρίζονται σε τοπικές αντιδράσεις που σχετίζονται με την εισαγωγή της βελόνας (τραυματισμοί σκάφος, τραυματισμοί νεύρων, άλλα), γενικές αντιδράσεις (παρασυμπαθητικομιμητικές άμεσων όσο και απώτερων τύπου) και πάνω από 10 σπάνια αλλά σημαντική άλλες επιπλοκές. Η σοβαρότητα και η δυνατότητα καταλογισμού των επιπλοκών δότη βαθμολογούνται σύμφωνα με μια άλλη, αλλά συγκρίσιμη κλίμακα που χρησιμοποιείται για ανεπιθύμητες ενέργειες στους λήπτες. Η κλίμακα αυτή είναι επίσης διεθνώς αποδεκτά [5] 
-%(βλέπε http://www.isbt-web.org/ members_only / αρχεία / κοινωνίας / StandardSurveillanceDOCO. Pdf).
- Επίσης, οι επιπλοκές του δότη πρέπει να αναφέρονται ως ποσοστά, προκειμένου να γίνουν συγκρίσεις και για τον καθορισμό των προτεραιοτήτων για τις παρεμβάσεις.	 
-		\subsubsection{Οδηγίες Ευρωπαϊκής και WHO}
-		Όλες οι υπηρεσίες αιμοδοσίας και τα νοσοκομεία, υποχρεώνονται να κοινοποιούν στις αρμόδιες αρχές με κατάλληλη διαδικασία αναφοράς τις σοβαρές ανεπιθύμητες αντιδράσεις 	και συμβάματα τα οποία σχετίζονται με τη μετάγγιση αίματος. Η κοινοποίηση στις αρμόδιες αρχές των σοβαρών ανεπιθυμήτων αντιδράσεων και συμβάντων σχετικά με τη μετάγγιση αίματος απαιτείται από την Ευρωπαϊκή Νομοθεσία (Οδηγία 2005/61/ΕΚ) και κατ’ επέκταση από την Εθνική νομοθεσία κάθε κράτους μέλους της Ευρωπαϊκής Ένωσης με κατάλληλη διαδικασία αναφοράς από τις Υπηρεσίες Αιμοδοσίας και τα Νοσοκομεία, που μεταγγίζουν ασθενείς.  
+ 		 
+ 	Κάθε σοβαρό ανεπιθύμητο συμβάν θα πρέπει να περιγράφεται αναλόγως. Για τον σκοπό αυτόν, έχει καθιερωθεί μία διεθνώς αποδεκτή κλίμακα ταξινόμησης. Η εύρεση της αιτιακής συσχέτισης μεταξύ ανεπιθύμητης αντίδρασης και μετάγγισης, έχει πολύ μεγάλη σημασία, καθώς έτσι μπορούμε να αναγνωρίσουμε αν ευθύνεται κάποιο συστατικό του αίματος ή όχι. Υπάρχουν πολλοί διαφορετικοί τύποι αντιδράσεων μετάγγισης. Η πιο κοινή υποδιαίρεση που χρησιμοποιείται είναι η ταξινόμηση με βάση την εμφάνιση των αντιδράσεων σε οξείες (λιγότερο από 24 ώρες μετά) και καθυστερημένες (περισσότερο από 24 ώρες μετά την μετάγγιση) αντιδράσεις. Πέραν από τους παραλήπτες αίματος, ανεπιθύμητες καταστάσεις μπορούν να προκύψουν και στους εθελοντές αιμοδότες. Τα αίτια και οι παράγοντες, που προκαλούν επιπλοκές στους αιμοδότες, διαφέρουν από τα αντίστοιχα των αιμοληπτών, και χωρίζονται σε τοπικές αντιδράσεις (κυρίως λόγω της εισαγωγής βελόνας), σε γενικότερες αντιδράσεις και σε διάφορους άλλους τύπους επιπλοκών. Οι επιπλοκές ταξινομούνται σε μία διαφορετική διεθνή κλίμακα, έτσι ώστε να να μπορούν να γίνουν συγκρίσεις και τίθενται τα σημεία στα οποία πρέπει να γίνουν παρεμβάσεις. 
+ 	
 		Όλες οι υπηρεσίες αιμοδοσίας και τα νοσοκομεία, υποχρεώνονται να κοινοποιούν στις αρμόδιες αρχές με κατάλληλη διαδικασία αναφοράς τις σοβαρές ανεπιθύμητες αντιδράσεις και συμβάματα τα οποία σχετίζονται με τη μετάγγιση αίματος. Οι αναφορές αυτές περιλαμβάνουν πληροφορίες για την κλινική έκβαση των αντιδράσεων και τα μέτρα που έλαβαν οι υπεύθυνοι, σε σχέση με τα άλλα παράγωγα του αίματος που μεταγγίστηκαν, καθώς και τον προσδιορισμό των σοβαρών συμβάντων εξαιτίας ελαττωματικού προϊόντος, εξοπλισμού, ανθρώπινου λάθους και άλλων προβλημάτων.\cite{cite-revekka} Οι μη σοβαρές αντιδράσεις καθώς και άλλα λάθη τα οποία συμβαίνουν κατά την μετάγγιση αίματος δεν αποτελούν αντικείμενο για αναφορά σύμφωνα με τις οδηγίες της Ευρωπαϊκής Ένωσης.
-		Για την πλήρη και ορθή γνωστοποίηση όλων των άνωθεν πληροφοριών είναι απαραίτητη η ανάπτυξη ολοκληρωμένων πληροφοριακών συστημάτων αιμοεπαγρύπνησης. Για την εφαρμογή ενός συστήματος αιμοεπαγρύπνησης πρέπει να δημιουργούνται λειτουργικοί σύνδεσμοι μεταξύ των Κλινικών τμημάτων, των Κέντρων Αιμοδοσίας, των νοσοκομειακών υπηρεσιών Αιμοδοσίας και των αρμόδιων εθνικών αρχών. Τα αποτελέσματα της ανάλυσης των δεδομένων που προκύπτουν από τα συστήματα αιμοεπαγρύπνησης πρέπει να ανατροφοδοτούνται περιοδικα σε εκείνους, που παρείχαν τα πρωτογενή δεδομένα και στις αρμόδιες αρχές.
 		
-		lalalalalalalalal
+		Για την πλήρη και ορθή γνωστοποίηση όλων των άνωθεν πληροφοριών είναι απαραίτητη η ανάπτυξη ολοκληρωμένων πληροφοριακών συστημάτων αιμοεπαγρύπνησης. Για την εφαρμογή ενός συστήματος αιμοεπαγρύπνησης πρέπει να δημιουργούνται λειτουργικοί σύνδεσμοι μεταξύ των Κλινικών τμημάτων, των Κέντρων Αιμοδοσίας, των νοσοκομειακών υπηρεσιών Αιμοδοσίας και των αρμόδιων εθνικών αρχών. Τα αποτελέσματα της ανάλυσης των δεδομένων που προκύπτουν από τα συστήματα αιμοεπαγρύπνησης πρέπει να ανατροφοδοτούνται περιοδικά σε εκείνους, που παρείχαν τα πρωτογενή δεδομένα και στις αρμόδιες αρχές.
 		
-
 	\subsection{Haemovigilance στο εξωτερικό}
+	
+	
+	
 	\subsection{Υπόσυστηματα Haemovigilance Ελλάδα}
