Donor categories 2nd draft

--- a/blood_donation.tex
+++ b/blood_donation.tex
@@ -162,10 +162,20 @@ Rh-Θετικοί και το 15\% δεν το έχουν, δηλαδή είνα
 	\item Δότες αίματος επί πληρωμή οι οποίοι λαμβάνουν πληρωμή από την οικογένεια η οποία δεν μπορεί να παρέχει η ιδία δότη αντικατάστασης για το συγγενικό τους πρόσωπο.
 \end{enumerate} 
 
-Σε αυτό το σημείο ότι η τρίτη κατηγορία αιμοδοτών εμφανίζεται μόνο σε τριτοκοσμικές χώρες και κυρίως σε χώρες της Αφρικής. Στατιστικά στοιχεία έχουν δείξει ότι οι τακτικοί εθελοντές αιμοδότες (VDs) σχετίζονται με ασφαλέστερες παροχές αίματος σε σχέση με τους δότες αντικατάστασης όσον αφορά τις μεταδιδόμενες κατά την μετάγγιση ασθένειες \cite{Liu1998}.
+		Σε αυτό το σημείο ότι η τρίτη κατηγορία αιμοδοτών εμφανίζεται μόνο σε τριτοκοσμικές χώρες και κυρίως σε χώρες της Αφρικής. Στατιστικά στοιχεία έχουν δείξει ότι οι τακτικοί εθελοντές αιμοδότες (VDs) σχετίζονται με ασφαλέστερες παροχές αίματος σε σχέση με τους δότες αντικατάστασης όσον αφορά τις μεταδιδόμενες κατά την μετάγγιση ασθένειες \cite{Liu1998}.
 
-Στοιχεία του Παγκόσμιου Οργανισμού Υγείας (WHO) και του Συμβουλίου της Ευρώπης υποδεικνύουν ότι το αίμα και τα παράγωγα του αίματος θα πρέπει να συλλέγονται αποκλειστικά από τακτικούς μη αμειβόμενους εθελοντές \cite{VOX:VOX5295}. Τα συστήματα αιμοδοσίας τα οποία στηρίζονται στους εθελοντές αιμοδότες οι οποίοι δίνουν αίμα σε σταθερή βάση, έχουν τη δυνατότητα να διαχειριστούν καλύτερα τις παροχές αίματος και να προγραμματίσουν τις μεταγγίσεις, επιταχύνοντας την όλη διαδικασία. Τέλος, από ηθική άποψη, δεν είναι σωστό να αναγκάζονται οι συγγενείς ενός ασθενούς σε ανάγκη, να αναζητούν κάτω από ψυχολογική πίεση άτομα για να προσφέρουν αίμα προκειμένου να καλυφθούν οι ανάγκες του δικού τους ανθρώπου.
-	\subsection{Ανάγκες μονάδων αίματος}		
+		Στοιχεία του Παγκόσμιου Οργανισμού Υγείας (WHO) και του Συμβουλίου της Ευρώπης υποδεικνύουν ότι το αίμα και τα παράγωγα του αίματος θα πρέπει να συλλέγονται αποκλειστικά από τακτικούς μη αμειβόμενους εθελοντές \cite{VOX:VOX5295}. Τα συστήματα αιμοδοσίας τα οποία στηρίζονται στους εθελοντές αιμοδότες οι οποίοι δίνουν αίμα σε σταθερή βάση, έχουν τη δυνατότητα να διαχειριστούν καλύτερα τις παροχές αίματος και να προγραμματίσουν τις μεταγγίσεις, επιταχύνοντας την όλη διαδικασία. Τέλος, από ηθική άποψη, δεν είναι σωστό να αναγκάζονται οι συγγενείς ενός ασθενούς σε ανάγκη, να αναζητούν κάτω από ψυχολογική πίεση άτομα για να προσφέρουν αίμα προκειμένου να καλυφθούν οι ανάγκες του δικού τους ανθρώπου.
+
+		Οι εθελοντές αιμοδότες (VDs) μπορούν να χωριστούν περεταίρω στις ακόλουθες κατηγορίες \cite{karabaggeli-blatsa}:
+		\begin{enumerate}
+			\item Στους συστηματικούς και αυτόνομους, οι οποίοι προσέρχονται να αιμοδοτήσουν με δική τους αποκλειστικά πρωτοβουλία.
+			\item Στους οργανωμένους σε συλλόγους ή τράπεζες αίματος που καλούνται να δώσουν αίμα.
+			\item Στους περιστασιακούς που απαντούν σε εκκλήσεις ραδιοφωνικών σταθμών και άλλων μέσων.
+			\item Στους εποχιακούς που δίνουν αίμα κατά την ημέρα της αιμοδοσίας του Δήμου, του πολιτιστικού συλλόγου που ανήκουν και άλλων οργανώσεων.
+		\end{enumerate}
+		
+		Ο πραγματικός βέβαια εθελοντής αιμοδότης είναι εκείνος που προσέρχεται να δώσει αίμα με μοναδικό κίνητρο την κοινωνική αλληλεγγύη και τον αλτρουισμό, δεν τον απασχολεί σε ποιον θα δοθεί το αίμα που πρόσφερε και δεν περιμένει κανένα απολύτως αντάλλαγμα.
+	\subsection{Ανάγκες μονάδων αίματος - Εξωτερικό}		
 	\subsection{Εθελοντική αιμοδοσία στην Ελλάδα}
 		Στην Ελλάδα το "Εθνικό Κέντρο Αιμοδοσίας" (Ε.ΚΕ.Α) το οποίο στεγάζεται στο Υπουργείο Υγείας και Πρόνοιας αποτελεί το κεντρικό όργανο για την οργάνωση των Υπηρεσιών Αιμοδοσίας. Οι Υπηρεσίες Αιμοδοσίας μπορούν να διαχωριστούν στις παρακάτω τρεις κατηγορίες:
 		\begin{enumerate}
