--- a/references.bib
+++ b/references.bib
@@ -629,6 +629,16 @@ URN: urn:nbn:de:0114-fqs0501297},
   Timestamp                = {2015.09.27}
 }
 
+@Article{karabaggeli-blatsa,
+  Title                    = {Εθελοντική Αιμοδοσία},
+  Author                   = {Καραβαγγέλη-Βλάτσα},
+  Journal                  = {Μικροβιολογικά Χρονικά},
+  Year                     = {2005},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.04}
+}
+
 @Booklet{cite-revekka,
   Title                    = {ΔΕΛΤΙΟ ΕΠΙΔΗΜΙΟΛΟΓΙΚΗΣ ΕΠΙΤΗΡΗΣΗΣ ΛΟΙΜΩΞΕΩΝ ΠΟΥ ΜΕΤΑΔΙΔΟΝΤΑΙ ΜΕ ΤΟ ΑΙΜΑ (1996-2011) ΕΠΙΤΗΡΗΣΗΣ ΑΝΕΠΙΘΥΜΗΤΩΝ ΑΝΤΙΔΡΑΣΕΩΝ ΚΑΙ ΣΥΜΒΑΝΤΩΝ ΣΧΕΤΙΚΑ ΜΕ ΤΗ ΜΕΤΑΓΓΙΣΗ ΑΙΜΑΤΟΣ (1997-2011) ΕΠΙΤΗΡΗΣΗΣ ΑΝΕΠΙΘΥΜΗΤΩΝ ΑΝΤΙΔΡΑΣΕΩΝ ΚΑΙ ΣΥΜΒΑΝΤΩΝ ΚΑΤΑ ΚΑΙ ΜΕΤΑ ΤΗΝ ΑΙΜΟΔΟΣΙΑ (2003-2011)},
   Author                   = {Κωνσταντίνα Πολίτη, Clive Richardson},
